[tool.poetry]
name = "proxy"
version = "0.0.0"
description = "Fork of monosans/proxy-scraper-checker with SQLite storage and API endpoint"
authors = [
    "monosans <hsyqixco@protonmail.com>",
    "n8creator <github@n8creator.com>"
]
maintainers = [
    "n8creator <https://github.com/n8creator>"
]
license = "MIT"
repository = "https://github.com/n8creator/proxy-scraper-checker-api"
classifiers = ["Private :: Do Not Upload"]
packages = [
    { include = "proxy_scraper_checker" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
aiodns = ">=1.1,<4"
aiofiles = "*"
aiohttp = ">=3.8.6,<4"
aiohttp-socks = ">=0.7,<0.11"
attrs = ">=22.2"
brotli = ">=1,<2"
brotlicffi = "<2"
certifi = "*"
charset-normalizer = ">=2,<4"
maxminddb = ">=1.3,<3"
platformdirs = "<5"
rich = ">=12.3,<14"
tomli = { version = "<3", python = "<3.11" }
uvloop = { version = ">=0.14,<0.22", markers = "implementation_name == 'cpython' and (sys_platform == 'darwin' or sys_platform == 'linux')" }

[tool.poetry.dev-dependencies]
mypy = { version = "1.14", extras = ["faster-cache"] }
ruff = "0.8.4"
tomli = "2.2.1"
types-aiofiles = "24.1.0.20241221"
typing-extensions = "4.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"